--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <button id="surpriseBtn">Tap Me</button>
     <div id="touchMessage" class="hidden"></div>
-    <p class="hint">Tap Button • Swipe Up Button • Long Press Button</p>
+    <p class="hint">Tap Button • Swipe Up </p>
   </div>
 
   <div id="popupText" class="hidden">
@@ -96,3 +96,4 @@
   <script src="index.js"></script>
 </body>
 </html>
+
